# apify-connector

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  justfile  todo
.github/workflows/: build_to_dockerhub.yml
src/: client.rs  dto.rs  extraction.rs  handlers.rs  job.rs  lib.rs  main.rs  mapping_utils.rs  metrics.rs  utils.rs  web_utils.rs
src/actors/: google_search.rs  instagram.rs  mod.rs  tripadvisor.rs  web_scraper.rs
tests/: actors_endpoint.rs
