[package]
name = "apify-connector"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.143"
anyhow = "1.0.92"
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.38"
rhai = "1.22.2"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "json"]


[profile.release]
strip = true
lto = true
codegen-units = 1


[[bin]]
name = "cache"
path = "src/cache_helper.rs"


[[bin]]
name = "server"
path = "src/main.rs"
